<resources>
    <string name="site_key">ebc2f68bf336f91bebf681d0ec33735b</string>
    <string name="zendesk_channel_key">eyJzZXR0aW5nc191cmwiOiJodHRwczovL2NsYXlmdWwuemVuZGVzay5jb20vbW9iaWxlX3Nka19hcGkvc2V0dGluZ3MvMDFHNkRYRldDSFhZRzBKVzJKRFJZUVRIMFIuanNvbiJ9</string>
    <string name="app_name">Clayful</string>
    <string name="hey">Hey</string>
    <string name="we_re_so_glad_you_re_here">We\'re so glad you\'re here!</string>
    <string name="login">Login</string>
    <string name="clayful">Clayful</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email_address">School Email</string>
    <string name="password">Clayful Password</string>
    <string name="email_hint">name@school.com</string>
    <string name="password_hint">********</string>
    <string name="reset_my_password">Forgot password?</string>
    <string name="empty_email_field">Email cannot be empty</string>
    <string name="empty_password_field">Password cannot be empty</string>
    <string name="invalid_email">Entered email address is not valid</string>
    <string name="empty_otp">Code field can\'t be empty</string>
    <string name="empty_new_password">New password field can\'t be empty</string>
    <string name="empty_confirm_password">Confirm password field can\'t be empty</string>
    <string name="password_missmatch">Passwords don’t match</string>
    <string name="password_length_error">Password must be minimum 8 characters</string>
    <string name="ok">Ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="step_1_of_2">STEP 1 of 2</string>
    <string name="step_2_of_2">STEP 2 of 2</string>
    <string name="i_already_have_a_reset_code"><a href="">I already have a reset code</a></string>
    <string name="password_reset_instruction">Enter the email associated with your account, and we’ll send you an email with instructions to reset your password.</string>
    <string name="send_password_reset_email">Send instructions</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="check_your_email">Check your email</string>
    <string name="check_six_digit_code">Please enter your 6-digit one-time code. Then create and confirm your password.</string>
    <string name="_6_digit_one_time_code">6-digit one-time code</string>
    <string name="otp_hint">123456</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_a_new_reset_code"><a href="">Send a new reset code</a></string>
    <string name="reset_password">Reset Password</string>
    <string name="start_a_chat">Start a chat</string>
    <string name="log_out"><a href="">Log out</a></string>
    <string name="no_internet_available">No internet connection! Please check your internet connectivity.</string>
    <string name="default_notification_channel_id">myFirebaseChannel</string>
    <string name="press_back_to_exit">Press back button again to Exit.</string>
    <string name="login_with_the_account_you_created_at_school">Login with the account\nyou created at school</string>
    <string name="great">Great!</string>
    <string name="your_password_has_been_changed">Your password has been changed.</string>
    <string name="let_s_chat">Let\'s chat</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you\nwant to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="entering_a_safe_space">Entering a safe space...</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password_suggestion">Password must contain at\nleast 8 letters and numbers</string>
    <string name="customer_io_site_id">24c64fcc43414fbae214</string>
    <string name="customer_io_api_key">ff5da16dbb7b3f4eece1</string>
    <string name="com.heapanalytics.android.buildConfigPkgName">com.health.clayful</string>
    <string name="app_id">1321035351</string>
    <string name="app_origin">https://app.clayfulhealth.com</string>
</resources>