<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.health.clayful.viewModel.ForgotPasswordViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/AppNameTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:textAlignment="textStart"
                android:text="@string/reset_your_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="@font/mulish_regular"
                android:lineSpacingExtra="7sp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:text="@string/password_reset_instruction"
                android:textColor="@color/app_bg_color"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/email_address"
                android:layout_marginHorizontal="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEt"
                style="@style/AppEditTextStyle"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@={model.resetPasswordEmail}"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/emailFieldCantBeEmpty"
                style="@style/ErrorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:visibility="gone"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:text="@string/empty_email_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendResetEmailBtn"
                style="@style/LoginButtonStyle"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:onClick="@{(v) -> model.sendResetPasswordMail()}"
                android:text="@string/send_password_reset_email"
                app:backgroundTint="@color/app_bg_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailFieldCantBeEmpty" />


            <TextView
                android:id="@+id/alreadyHaveCode"
                style="@style/ResetTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_medium"
                android:text="@string/i_already_have_a_reset_code"
                android:textSize="@dimen/_13sdp"
                android:onClick="@{(v)-> model.openResetPasswordFragmnt()}"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sendResetEmailBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>